Show interests doorhanger on API access with temporary icons. Wrap the content permission with a promise to delay access to the API until the permission check finishes. Make sure each web api instance is instantiated for each window.

--- a/browser/themes/linux/browser.css
+++ b/browser/themes/linux/browser.css
@@ -1230,6 +1230,10 @@ toolbar[iconsize="small"] #webrtc-status-button {
   list-style-image: url(chrome://browser/skin/pointerLock-64.png);
 }
 
+.popup-notification-icon[popupid="interests"] {
+  list-style-image: url(chrome://browser/skin/mixed-content-blocked-64.png);
+}
+
 /* Notification icon box */
 #notification-popup-box {
   position: relative;
@@ -1342,6 +1346,10 @@ toolbar[iconsize="small"] #webrtc-status-button {
 }
 #pointerLock-cancel {
   margin: 0px;
+}
+
+#interests-notification-icon {
+  list-style-image: url(chrome://browser/skin/mixed-content-blocked-16.png);
 }
 
 #treecolAutoCompleteImage {
